[package]
name = "elevup-terror-countdown"
version = "0.1.0"
authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
